--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MyMedTrack</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>MyMedTrack</h1>
-    <input type="text" id="medicineInput" placeholder="Enter medicine name" />
-    <button onclick="addMedicine()">Add Medicine</button>
+    <h1>💊 MyMedTrack</h1>
+    <div class="input-group">
+      <input type="text" id="medicineInput" placeholder="Enter medicine name" />
+      <button onclick="addMedicine()">Add</button>
+    </div>
     <ul id="medicineList"></ul>
   </div>
   <script src="script.js"></script>
