--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>💊 MyMedTrack</h1>
     <div class="input-group">
       <input type="text" id="medicineInput" placeholder="Enter medicine name" />
+      <input type="time" id="timeInput" />
       <button onclick="addMedicine()">Add</button>
     </div>
     <ul id="medicineList"></ul>
